--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "electron-prisma-trpc-example",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "repository": "https://github.com/awohletz/electron-prisma-trpc-example-releases",
   "description": "An example repo showing how to use Electron with tRPC and Prisma",
   "main": "dist/server/main.js",
   "scripts": {
-    "build": "vite build && tsc --build",
-    "start": "npm run build && electron .",
+    "build": "vite build && prisma generate && tsc --build && node copy-files.js && node install-engines-on-mac.js",
+    "start": "npm run build && cross-env NODE_ENV=development electron .",
     "pack": "npm run build && electron-builder --dir",
     "dist": "npm run build && electron-builder",
     "publish": "npm run build && dotenv -- electron-builder -p always"
@@ -14,18 +14,23 @@
   "author": "Ayron Wohletz",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^6.0.0",
     "electron": "^21.0.1",
     "electron-builder": "^23.3.3",
     "electron-notarize": "^1.2.1",
     "fs-extra": "^10.1.0",
+    "replace-in-file": "^6.3.5",
     "typescript": "^4.8.4",
     "vite": "^3.1.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
+    "@prisma/engines": "^4.4.0",
     "@trpc/client": "^10.0.0-proxy-beta.13",
     "@trpc/server": "^10.0.0-proxy-beta.13",
-    "electron-log": "^4.4.8"
+    "electron-log": "^4.4.8",
+    "prisma": "^4.4.0"
   }
 }
