Use the prisma client that has the QE path configured

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -9,7 +9,8 @@
     "strict": true,
     "module": "ES6",
     "moduleResolution": "Node",
-    "noEmit": true
+    "noEmit": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "**/*",
@@ -18,5 +19,5 @@
   "exclude": [
     "../../node_modules",
     "../server"
-  ]
+  ],
 }
