--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@trpc/client": "^10.5.0",
     "@trpc/server": "^10.5.0",
     "electron-log": "^4.4.8",
-    "prisma": "^4.7.1"
+    "prisma": "^4.7.1",
+    "superjson": "^1.12.1",
+    "zod": "^3.20.2"
   }
 }
